[gd_scene load_steps=11 format=3 uid="uid://comee8gow4ds4"]

[ext_resource type="Script" path="res://Ships/prota.gd" id="1_toqw8"]
[ext_resource type="Texture2D" uid="uid://cc140o0621i8u" path="res://Assets/Ships/Prota.png" id="2_bwg5x"]

[sub_resource type="AtlasTexture" id="AtlasTexture_bj2c6"]
atlas = ExtResource("2_bwg5x")
region = Rect2(0, 0, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3ov4o"]
atlas = ExtResource("2_bwg5x")
region = Rect2(33, 0, 33, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_paaod"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bj2c6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3ov4o")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mrhqb"]
size = Vector2(27, 19)

[sub_resource type="Animation" id="Animation_ygdiq"]
resource_name = "hurt"
length = 0.2
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 0, 0, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_ny2nj"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_uhwdo"]
resource_name = "dead"
length = 1.5
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_q4cpd"]
_data = {
"RESET": SubResource("Animation_ny2nj"),
"dead": SubResource("Animation_uhwdo"),
"hurt": SubResource("Animation_ygdiq")
}

[node name="Prota" type="CharacterBody2D"]
scale = Vector2(4, 4)
collision_mask = 6
script = ExtResource("1_toqw8")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_paaod")
autoplay = "default"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -0.5)
shape = SubResource("RectangleShape2D_mrhqb")

[node name="MarkerLeft" type="Marker2D" parent="." groups=["Prota"]]
position = Vector2(-10, -16)

[node name="MarkerRight" type="Marker2D" parent="." groups=["Prota"]]
position = Vector2(10, -16)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_q4cpd")
}

[node name="ShootCooldown" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
